# Food-Delivery-Operations-Analytics

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: dbt-docs.yml
config/: settings.py
data/bronze/delivery_events/: .part-00000-aee7d42e-04df-49e8-9850-f1a3ef4acbe0-c000.snappy.parquet.crc
data/bronze/order_items/: .part-00000-3a6e105d-d87f-4267-8a6e-c7e9ddce1e1d-c000.snappy.parquet.crc  .part-00001-3a6e105d-d87f-4267-8a6e-c7e9ddce1e1d-c000.snappy.parquet.crc  .part-00002-3a6e105d-d87f-4267-8a6e-c7e9ddce1e1d-c000.snappy.parquet.crc
data/bronze/orders/: .part-00000-0980e66a-56e5-4361-a027-8882bc8eb022-c000.snappy.parquet.crc  .part-00001-0980e66a-56e5-4361-a027-8882bc8eb022-c000.snappy.parquet.crc  .part-00002-0980e66a-56e5-4361-a027-8882bc8eb022-c000.snappy.parquet.crc
data/bronze/refunds/: .part-00000-deda2bb0-b3f9-4773-aea0-29a96bd5c1a1-c000.snappy.parquet.crc
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: datediff_minutes.sql  time_slot_bucket.sql
dbt_project/models/staging/: _staging.yml  stg_delivery_events.sql  stg_orders.sql  (+5 more)
dbt_project/seeds/: time_slots.csv
dbt_project/tests/: assert_refund_pct_sums_to_100.sql
docs/: ARCHITECTURE.md  SOLUTION.md  catalog.json  index.html  manifest.json
src/generators/: __init__.py  base.py  delivery_events.py  orchestrator.py  order_items.py  orders.py  refunds.py  restaurants.py  riders.py  support_tickets.py
src/loaders/: silver_to_duckdb.py
src/spark_jobs/: run_pipeline.py
tests/: conftest.py
tests/test_generators/: test_data_quality.py
(+301 files in other folders)
