[project]
name = "food-delivery-analytics"
version = "0.1.0"
description = "Food Delivery Operations Analytics Pipeline"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "faker>=20.0.0",
    "dbt-duckdb>=1.7.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
